# GR-ray-tracer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  create_example_data.py  main.cpp
benchmarks/: run_scaling.py
config/: example.toml  fluid_emission.toml  fm-torus-image.toml
src/: CMakeLists.txt  analyze_output.py  cnpy.h  create_example_data.py  main.cpp  simulation_options.hpp  utils.cpp  utils.hpp
src/analysis/: geodesic_observables.hpp
src/geodesic_integrate/: cartesian_kerr_schild.hpp  integrate_cart_ks.hpp  rk_integrators.hpp
src/input/: domain_decomposition.hpp  load_python_arrays.hpp  toml_config.hpp
src/metrics/: cartesian_kerr_schild.hpp  kerr_schild_core.hpp
src/mpi/: photon_exchange.hpp
src/output/: display.hpp  output_variables.hpp  write_output.hpp
src/radiative_transfer/: fluid_frame.hpp  initialize_photons.hpp  observation.hpp  photon_generation.hpp  radiative_transfer.hpp  scattering.hpp
src/tests/: analytics.ipynb  test_convergence.cpp  test_geodesic_observables.cpp  test_npy_loader.cpp  test_output_stride.cpp  test_photon_exchange.cpp  test_photon_generation.cpp  test_radiative_transfer.cpp  test_rk_integrators.cpp  test_scattering.cpp  test_simulation_options.cpp
